begins work on top navigation bar

--- a/html/index.html
+++ b/html/index.html
@@ -8,11 +8,20 @@
   <body>
     <header class="header-bar">
       <div class="left-header-buttons">
-        <div class="three-bar-thingy"></div>
-        <div class="youtube-logo-button"></div>
+        <div class="three-bar-thingy">
+          <img src="../assets/YT_SVG_tag.png">
+        </div>
+        <div class="youtube-logo-button">
+          <img src="../assets/YT_logo.png">
+        </div>
       </div>
       <div class="search-bar">
-
+        <form class="search-form">
+          <div class="search-field-container">
+            <input type="text" placeholder="Search" class="search-field">
+          </div>
+          <input type="submit" class="submit-button">
+        </form>
       </div>
       <div class="right-header-buttons">
 
