remove some default search bar formatting

--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
           <div class="search-field-container">
             <input type="text" placeholder="Search" class="search-field">
           </div>
-          <input type="submit" class="submit-button">
+          <input type="submit" class="submit-button" value="">
         </form>
       </div>
       <div class="right-header-buttons">
