complete nav bar images

--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
         </form>
       </div>
       <div class="right-header-buttons">
-
+        <img src="../assets/right-bar-buttons-2.png">
       </div>
     </header>
     <section class="left-column">
