finishes video name bar and fake reaction buttons

--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,11 @@
         <iframe class="video-player" width="641" height="362" src="https://www.youtube.com/embed/e-8ihf_uOcw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <div class="video-details">
-
+          <h1>Pyrrhon - Abc No Rio 2014</h1>
+          <div class="other-vid-deets">
+            <p><strong>3,165 views • Oct 26, 2014</strong></p>
+            <img src="../assets/vid-react-buttons.png">
+          </div>
         </div>
       </div>
       <div class="creator-info">
