completes all video and channel details

--- a/html/index.html
+++ b/html/index.html
@@ -41,10 +41,18 @@
       </div>
       <div class="creator-info">
         <div class="channel-info">
-
+          <img src="../assets/unartig_logo.jpg">
+          <div class="namesubscrip">
+            <p><strong>unARTigNYC</strong></p>
+            <p id="subscribers">25.4K subscribers</p>
+          </div>
+          <button class="subscripbutt">SUBSCRIBE</button>
         </div>
         <div class="channel-text">
-
+          <p><a href="https://unartignyc.com/">http://unartignyc.com/</a><br>
+            <a href="http://www.facebook.com/UnartigOfficial">http://www.facebook.com/UnartigOfficial</a><br>
+            You can reach us at mail@unartignyc.com</p>
+            <span><strong>SHOW MORE</strong></span>         
         </div>
       </div>
       <div class="comments">
