completes video display, channel info, and commenter interface (but does not display past comments yet)

--- a/html/index.html
+++ b/html/index.html
@@ -57,7 +57,18 @@
       </div>
       <div class="comments">
         <div class="comment-interface">
-
+          <div class="comment-stats">
+            <span>4 Comments</span>
+            <img src="../assets/sort-by.png">
+                    
+          </div>
+          <div class="comment-line">
+              <img src="../assets/doug-logo.jpg" class="commenter-logo">
+              <div>
+                <input type="text" placeholder="Add a public comment..." class="comment-field">
+              </div>
+          </div>
+          
         </div>
         <div class="comment-dump">
           <div class="user-comments" id="comment1">
