complete comment display

--- a/html/index.html
+++ b/html/index.html
@@ -72,13 +72,28 @@
         </div>
         <div class="comment-dump">
           <div class="user-comments" id="comment1">
-
+            <img src="../assets/comment-av-1.jpg" class="comment-avs">
+            <div class="comment-dump-text">
+              <p class="commenter-name">Ângelo Henrique <span class="comment-date">3 years ago</span></p>
+              <p class="comment-text">"ABC no Rio"...pensei que fosse show no Brasil</p>
+              <img class="resbutts" src="../assets/response-buttons-1.png">
+            </div>
           </div>
           <div class="user-comments" id="comment2">
-
+            <img src="../assets/comment-av-2.jpg" class="comment-avs">
+            <div class="comment-dump-text">
+              <p class="commenter-name">Doron3 <span class="comment-date">4 years ago</span></p>
+              <p class="comment-text">thanks for the upload!</p>
+              <img class="resbutts" src="../assets/reply-buttons-2.png">
+            </div>
           </div>
           <div class="user-comments" id="comment3">
-
+            <img src="../assets/comment-av-3.jpg" class="comment-avs">
+            <div class="comment-dump-text">
+              <p class="commenter-name">ROTMONGER <span class="comment-date">3 years ago</span></p>
+              <p class="comment-text">IT'S NOT PERSONAL, IT'S NOT PERSONAL.</p>
+              <img class="resbutts" src="../assets/reply-buttons-2.png">
+            </div>
           </div>
         </div>
       </div>
